--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         alert(1)
     </script> -->
 
-    <script src="js\script.js"></script>
-    <script src="script1.js"></script>
+    <!-- <script src="js\script.js"></script>
+    <script src="script1.js"></script> -->
+    <script src="script2.js"></script>
 </body>
 
 </html>
