--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
     <!-- <script src="js\script.js"></script>
     <script src="script1.js"></script> -->
-    <script src="script2.js"></script>
+    <!-- <script src="script2.js"></script> -->
+    <script src="js\personalMoviesDB.js"></script>
+
+
 </body>
 
 </html>
