--- a/12.html
+++ b/12.html
@@ -10,7 +10,7 @@
 <body>
 
 
-    <p>Hello,World!!! and other pipple</p>
+    <!-- <p>Hello,World!!! and other pipple</p>
     <p>gfhafhfalfrrwtoirwoggslsgklkgs</p>
     <div>gfakfalfashfsalkfaslfalflkfalkfajf
         hfdhagjdlgdaagdjgjjadll;gfhafhfalfrrwtoirwoggslsgklkgs
@@ -18,7 +18,7 @@
         tempora consequuntur in ducimus veritatis itaque ea nisi minima natus velit cupiditate voluptatem, fugit debitis
         possimus, iure eaque sit? Deserunt itaque doloremque est similique obcaecati sit dicta nobis. Aut illo soluta
         perferendis rerum nemo!
-    </div>
+    </div> -->
 
 
 
