--- a/js/alertConfirmPrompt/alertConfirmPrompt.html
+++ b/js/alertConfirmPrompt/alertConfirmPrompt.html
@@ -91,7 +91,7 @@
 
 
 
-    <script srt="js\alertConfirmPrompt\alertConfirmPrompt.js"></script>
+    <script src="js\alertConfirmPrompt\alertConfirmPrompt.js"></script>
 
 </body>
 
