--- a/js/landscape/landscape.html
+++ b/js/landscape/landscape.html
@@ -16,7 +16,7 @@
 
 
 
-    <script crt="js\landscape\landscape.js"></script>
+    <script src="js\landscape\landscape.js"></script>
 </body>
 
 </html>
