--- a/js/logicalOperators/logicalOperators.html
+++ b/js/logicalOperators/logicalOperators.html
@@ -11,6 +11,7 @@
     <h1>Logical Operators in JavaScript</h1>
     <script src="logicalOperators\logicalOperators.js"></script>
 </body>
+<p>logicalOperators</p>
 
 </html>
 
